; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/dpaa/extr_dpaa_eth.c_dpaa_adjust_link.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/freescale/dpaa/extr_dpaa_eth.c_dpaa_adjust_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.mac_device = type { i32 (%struct.mac_device*)* }
%struct.dpaa_priv = type { %struct.mac_device* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @dpaa_adjust_link to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dpaa_adjust_link(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.mac_device*, align 8
  %4 = alloca %struct.dpaa_priv*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call %struct.dpaa_priv* @netdev_priv(%struct.net_device* %5)
  store %struct.dpaa_priv* %6, %struct.dpaa_priv** %4, align 8
  %7 = load %struct.dpaa_priv*, %struct.dpaa_priv** %4, align 8
  %8 = getelementptr inbounds %struct.dpaa_priv, %struct.dpaa_priv* %7, i32 0, i32 0
  %9 = load %struct.mac_device*, %struct.mac_device** %8, align 8
  store %struct.mac_device* %9, %struct.mac_device** %3, align 8
  %10 = load %struct.mac_device*, %struct.mac_device** %3, align 8
  %11 = getelementptr inbounds %struct.mac_device, %struct.mac_device* %10, i32 0, i32 0
  %12 = load i32 (%struct.mac_device*)*, i32 (%struct.mac_device*)** %11, align 8
  %13 = load %struct.mac_device*, %struct.mac_device** %3, align 8
  %14 = call i32 %12(%struct.mac_device* %13)
  ret void
}

declare dso_local %struct.dpaa_priv* @netdev_priv(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
